# hermes-session-patcher

./: .gitignore  README.md  pyproject.toml
docs/: community-post-zh.md
hermes_session_patcher/: __init__.py  cli.py  output.py
hermes_session_patcher/core/: __init__.py  constants.py  detector.py  format_strategy.py  hermes_db.py
hermes_session_patcher/ctf_config/: __init__.py  installer.py
hermes_session_patcher/web/backend/: api.py  main.py  schemas.py
scripts/: install.sh  start-web.sh
